--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^0.14.0+3
+  freezed: ^0.14.2
+  freezed_annotation: ^0.14.2
+  http: ^0.13.3
+  json_serializable: ^4.1.4
 
 dev_dependencies:
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
 
